--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
             <thead>
                 <tr>
                     <th>Имя</th>
+                    <th>Задание</th>
                     <th>Дата</th>
                     <th>Оценка</th>
                     <th>Ответы</th>
                     <th>Удалить</th>
-                </tr>
+                  </tr>
             </thead>
             <tbody id="journal_body">
                 <!-- Здесь будут добавляться записи -->
@@ -114,7 +115,8 @@
     </div>
     
     
-
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
